fix: prevent long file names from overflowing

--- a/packages/pluggableWidgets/file-uploader-web/src/ui/FileUploader.scss
+++ b/packages/pluggableWidgets/file-uploader-web/src/ui/FileUploader.scss
@@ -175,11 +175,15 @@ Place your custom CSS here
                     display: flex;
                     font-size: 11px;
                     flex-direction: column;
+                    min-width: 0;
 
                     .entry-details-main-name {
                         flex: 1;
                         font-weight: 600;
                         color: #3b4251;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
                     }
 
                     .entry-details-main-size {
